- Support for OffsetDateTime - Better error messages - Removed some deprecated methods